<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 FireHound ROM
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/fh_settings_title" >

    <!-- About FireHound -->
    <PreferenceScreen 
        android:key="info"
        android:title="@string/about_fh"
        android:fragment="com.fh.settings.fragments.firehound.Firehound" />

    <!-- Status Bar -->
    <PreferenceScreen 
        android:key="status_bar_settings"
        android:title="@string/status_bar_title"
        android:fragment="com.fh.settings.fragments.statusbar.StatusBarSettings" />

    <!-- Quick Settings -->
    <PreferenceScreen 
        android:key="quick_settings"
        android:title="@string/qs_title"
        android:fragment="com.fh.settings.fragments.qs.QuickSettings" />

    <!-- Notification Settings -->
    <PreferenceScreen 
        android:key="notification_settings"
        android:title="@string/notification_title"
        android:fragment="com.fh.settings.fragments.notifications.NotificationSettings" />

    <!-- Lockscreen Settings -->
    <PreferenceScreen 
        android:key="lockscreen_settings"
        android:title="@string/lockscreen_title"
        android:fragment="com.fh.settings.fragments.lockscreen.LockScreenSettings" />

    <!-- Recents Settings -->
    <PreferenceScreen 
        android:key="recents_settings"
        android:title="@string/recents_settings"
        android:fragment="com.fh.settings.fragments.recents.RecentsSettings" />

    <!-- Button Settings -->
    <PreferenceScreen 
        android:key="button_settings"
        android:title="@string/button_title"
        android:fragment="com.fh.settings.fragments.hwbuttons.ButtonSettings" />

    <!-- Navbar Settings -->
    <PreferenceScreen 
        android:key="navbar_settings"
        android:title="@string/navbar_title"
        android:fragment="com.fh.settings.fragments.navbar.NavbarSettings" />

    <!-- Display Settings -->
    <PreferenceScreen 
        android:key="display_settings"
        android:title="@string/display_title"
        android:fragment="com.fh.settings.fragments.display.DisplaySettings" />

    <!-- Sound Settings -->
    <PreferenceScreen 
        android:key="sound_settings"
        android:title="@string/sound_title"
        android:fragment="com.fh.settings.fragments.sound.SoundSettings" />

    <!-- Animation Settings -->
    <PreferenceScreen 
        android:key="animation_settings"
        android:title="@string/animation_settings"
        android:fragment="com.fh.settings.fragments.animation.AnimationSettings" />

    <!-- Misc Settings -->
    <PreferenceScreen 
        android:key="misc_settings"
        android:title="@string/misc_title"
        android:fragment="com.fh.settings.fragments.misc.MiscSettings" />


</PreferenceScreen>
